[package]
name = "rust-executor"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ethers = { version = "1.0.0", features = ["rustls", "abigen"] }
dotenv = "0.15"
chrono = "0.4"